fix overflow issue

--- a/packages/core/src/styles/components/_layout.scss
+++ b/packages/core/src/styles/components/_layout.scss
@@ -1,3 +1,8 @@
 .#{$prefix}--#{$charts-prefix}--chart-svg svg.layout-child {
 	overflow: visible;
+	display: table;
+}
+
+.#{$prefix}--#{$charts-prefix}--chart-svg svg.layout-svg-wrapper {
+	overflow: visible;
 }
